# MotifML

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.md  README.md  pyproject.toml
.github/: pull_request_template.md
analysis/notebooks/: ir_inspection.ipynb
conf/: README.md  logging.yml
conf/base/: catalog.yml  parameters.yml
docs/: architecture.md
docs/source/: architecture.rst  conf.py  index.rst  ir_contributor_guide.rst  ir_design.rst  ir_review_workflow.rst
notebooks/: ir_inspection.ipynb  model_input_inspection.ipynb  sequence_model_testbed.ipynb  tokenization_validation.ipynb  training_failure_analysis.ipynb  training_run_review.ipynb
src/motifml/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py  sharding.py
tests/: test_hooks.py  test_run.py
tests/analysis/: __init__.py  conftest.py  notebook_test_support.py  test_ir_inspection_notebook.py  test_model_input_inspection_notebook.py  test_tokenization_validation_notebook.py  test_training_failure_analysis_notebook.py  test_training_run_review_notebook.py
tests/datasets/: test_json_dataset.py  test_json_directory_dataset.py  test_model_input_storage.py  test_motif_ir_corpus_dataset.py  test_motif_ir_shard_dataset.py  test_motif_json_corpus_dataset.py  test_motif_json_shard_dataset.py  test_partitioned_record_set_dataset.py  test_text_dataset.py  test_tokenized_model_input_dataset.py  test_training_checkpoint_dataset.py
tests/evaluation/: test_metrics.py  test_reporting.py  test_sampling.py  test_sequence_testbed.py  test_structural_checks.py  test_unknown_tokens.py
tests/fixtures/: ir_fixture_catalog.json
tests/ir/: test_fixture_corpus.py  test_graph_projection.py  test_hierarchical_projection.py  test_ids.py  test_inspection_bundles.py  test_inspection_tables.py  test_inspection_visualizations.py  test_manifest_entry.py  test_models.py  test_motif_score_schema_snapshot.py  test_review_bundles.py  test_schema.py  (+6 more)
tools/: generate_ir_inspection_bundles.py  generate_ir_review_bundles.py  regenerate_ir_fixture_corpus.py  regenerate_training_fixtures.py  regenerate_training_split_fixtures.py  run_sharded_pipelines.py
(+224 files in other folders)
