[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11,<3.13"
name = "motifml"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "chardet<6",
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "numpy>=1.26",
    "kedro>=0.19",
    "kedro-viz>=9",
    "pyarrow>=20,<21",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "torch>=2.10.0",
]

[project.scripts]
"motifml" = "motifml.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "pytest-mock>=1.7.1,<2.0",
    "jsonschema>=4,<5",
    "ruff~=0.12.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
    "ipykernel>=6",
    "ruff>=0.12.12"
]

[tool.setuptools.dynamic]
version = {attr = "motifml.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "motifml"
project_name = "motifml"
kedro_init_version = "1.2.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/motifml -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "5c83dbdeaece4a18bf267e0b0232bf54"
